# rst2revealjs

./: .age.toml  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  pyproject.toml
.github/: release-body.md
.github/workflows/: deploy-website.yaml  release.yaml
playground/: index.html  package.json
playground/src/: editor.ts  global.d.ts  main.ts  style.css
playground/src/contexts/: playground.ts
src/rst2revealjs/: cli.py  engine.py  nodes.py  reader.py  template.txt  transforms.py  writer.py
tests/: test_it.py
website/: package.json  playground.html  template.txt  vite.config.ts
website/src/: main.ts  rst2revealjs.ts  style.css
