[project]
name = "rst2revealjs"
version = "0.0.0"
description = "Add your description here"
readme = "README.rst"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
